# MLVisSuite

./: README.md  app.py  application.py  main.py  prd.md  pyproject.toml  requirements.txt
backend/: .gitignore  algorithms.py  main.py  models.py  pyproject.toml  requirements.txt
frontend/: .gitignore  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChartComponent.tsx  Navbar.tsx  Plot.tsx
frontend/src/pages/: HomePage.tsx  KMeansPage.tsx  LinearRegressionPage.tsx  LogisticRegressionPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: apiClient.ts
static/css/: queries.css  style.css
static/js/: chartjs.js  script.js
templates/: base.html  gdBase.html  index.html  kmeans.html  linreg.html  logreg.html
