[project]
name = "mlvissuite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
    "colorama>=0.4.6",
    "cycler>=0.12.1",
    "flask>=3.0.3",
    "importlib>=1.0.4",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "kiwisolver>=1.4.7",
    "markupsafe>=2.1.5",
    "matplotlib>=3.7.5",
    "mpld3>=0.5.10",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "pyparsing>=3.1.4",
    "pytz>=2025.2",
    "six>=1.17.0",
    "typing>=3.10.0.0",
    "werkzeug>=3.0.6",
    "zipp>=3.20.2",
]
